fix(huron): Hunt group member cards overlap while adding multiple members

--- a/app/modules/call/features/shared/call-feature-members/call-feature-members.component.scss
+++ b/app/modules/call/features/shared/call-feature-members/call-feature-members.component.scss
@@ -77,7 +77,6 @@
       @include vr-spacing(ml, 26, 0px, true);
       @include vr-spacing(pb, 1);
 
-      position: fixed !important;
       height: 16rem !important;
       width: 54rem;
       left: 50%;
